--- a/XkcdComics/res/values/strings.xml
+++ b/XkcdComics/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">Xkcd Comics</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="title_activity_comic">ComicActivity</string>
 
 </resources>
